--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "ws": "latest",
-    "http-proxy": "latest"
+    "express": "^5.1.0",
+    "http-proxy": "latest",
+    "node-fetch": "^3.3.2",
+    "ws": "latest"
   },
   "license": "MIT",
   "keywords": [
-    "node",
+    "node"
   ]
 }
